syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

option go_package = "./;proto";

message RegisterRequest {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
}

message LoginRequest {
    string email = 1;
}

message OTPRequest {
    string email = 1;
    string code = 2;
}

message User {
    int32 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string last_seen = 5; // Use timestamp for time
    string status = 6; // 'online' or 'offline'
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message OTP {
    string code = 1;
}

message OTPResponse {
    bool status = 1;
    string message = 2;
    string user_email = 3;
    string token = 4;
}

message AuthResponse {
    bool status = 1;
    string message = 2;
}

service AuthService {
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc VerifyOTP(OTPRequest) returns (OTPResponse);
}