syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

option go_package = "./;proto";

message LoginRequest {
    string email = 1;
}

message OTPRequest {
    string email = 1;
    string code = 2;
}

message User {
  int32 id = 1;
  string email = 2;
  bool is_verified = 3;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message AuthResponse {
  string message = 1;
  User user = 2;
  string token = 3;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  string user_email = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc VerifyOTP(OTPRequest) returns (AuthResponse);
  rpc VerifyToken(TokenRequest) returns (TokenResponse);
}
